# soft-com-scrapping

./: .gitignore  README.md  pyproject.toml
src/: __init__.py
